cabal-version: 3.4
name: lua-hs
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Gabriel Simões
maintainer: simoes.sgabriel@gmail.com
category: Language
build-type: Simple

common defaults
    ghc-options: -fwrite-ide-info -hiedir=.hie
    default-language: Haskell2010

library
    import: defaults
    exposed-modules: Token, Parser
    build-depends:
        base,
        text,
        megaparsec,
        parser-combinators,
        scientific
    hs-source-dirs: src

executable lua-hs
    import: defaults
    main-is: Main.hs
    build-depends:
        base,
        lua-hs
    hs-source-dirs: app

test-suite lua-hs-test
    import: defaults
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        base,
        text,
        megaparsec,
        raw-strings-qq,
        lua-hs
